--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=NguyenHueSuongDE180706_SE18B01_Candidates
+application.vendor=LENOVO
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,10 +29,11 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Candidates.jar
+dist.jar=${dist.dir}/NguyenHueSuongDE180706_SE18B01_Candidates.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Candidates
+dist.jlink.output=${dist.jlink.dir}/NguyenHueSuongDE180706_SE18B01_Candidates
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Candidates
+jlink.launcher.name=NguyenHueSuongDE180706_SE18B01_Candidates
 main.class=controller.Console
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
